--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "php": "^7.1.3",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.8.*",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "spatie/laravel-permission": "^3.6"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.2",
@@ -41,7 +42,7 @@
             "database/factories"
         ],
         "files": [
-            "App/Http/helpers.php"
+            "app/Http/helpers.php"
         ]
     },
     "autoload-dev": {
